--- a/FutureGroupGuides/DNA-Week4.html
+++ b/FutureGroupGuides/DNA-Week4.html
@@ -38,7 +38,7 @@
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>Do you like the teachers you have? What classes did you end up getting?f</li>
+      <li>Do you like the teachers you have? What classes did you end up getting?</li>
       <li>Focusing on last week’s message, have you joined any new friend groups?</li>
     </ul>
 
