--- a/FutureGroupGuides/DNA-Week2.html
+++ b/FutureGroupGuides/DNA-Week2.html
@@ -31,7 +31,7 @@
 
 <body>
 
-  <div align="middle"><img src="./img/fps-logo.png" alt="FPS Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
 
   <h1><i>DNA</i> Week 2</h1>
 
