--- a/FutureGroupGuides/DNA-Week5.html
+++ b/FutureGroupGuides/DNA-Week5.html
@@ -31,8 +31,8 @@
 
 <body>
 
-  <div align="middle"><img src="./img/fps-logo.png" alt="FPS Logo" style="max-width:80%;height:auto;"></div>
-
+  <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
+  
   <h1><i>DNA</i> Week 5</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
