add Late Night notice to DNA week 5

--- a/FutureGroupGuides/DNA-Week5.html
+++ b/FutureGroupGuides/DNA-Week5.html
@@ -84,7 +84,13 @@
   <ul>
     <li>Close small group out with prayer requests.</li>
     <li>After prayer, remind your students of THE WEEKEND and any upcoming group events!</li>
+    <li>As a group, who are a few people you could invite to come to fpStudents? Our goal is for each group to invite at least one person to students this week.</li>
   </ul>
+
+  <h2><font color="red">Special Announcement for High School Students ONLY</font></h2>
+
+  <p>Late Night is TONIGHT! Late Night is a time of extended worship for high school students only. Come be refreshed and spend extra time with God in the Chapel at 9:00 pm after group.</p>
+
 
   </body>
 
